[options.data_files]
. = requirements.txt

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt
